# legal_doc_analyzer

./: .gitignore  PROJECT_SUMMARY.md  README.md  docker-compose.yml  generate_summary.py  pyproject.toml
src/legal_doc_analyzer/: __main__.py
src/legal_doc_analyzer/api/: main.py  models.py  routes.py
src/legal_doc_analyzer/chunkers/: base_chunker.py
src/legal_doc_analyzer/processors/: __init__.py  audio_processor.py  pdf_processor.py  video_processor.py
src/legal_doc_analyzer/services/: mistral_service.py
src/legal_doc_analyzer/storage/: base.py  mock_store.py  vector_store.py
src/legal_doc_analyzer/utils/: project_summary.py
tests/: create_test_data.py  test_processors.py
